# docs/swagger.json
@@ -7,13 +7,18 @@
         "description": "Api server",
         "title": "Simple API",
         "contact": {},
-        "version": "0.0.1"
+        "version": "0.0.9"
     },
     "host": "localhost:8000",
     "basePath": "/api/users/v1",
     "paths": {
         "/": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "produces": [
                     "application/json"
                 ],
@@ -21,15 +26,6 @@
                     "read"
                 ],
                 "summary": "Retrieves users",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Authorization token",
-                        "name": "token",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -43,6 +39,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "produces": [
                     "application/json"
                 ],
@@ -51,13 +52,6 @@
                 ],
                 "summary": "Create new user",
                 "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Authorization token",
-                        "name": "token",
-                        "in": "path",
-                        "required": true
-                    },
                     {
                         "description": "New user",
                         "name": "message",
@@ -117,8 +111,127 @@
                 }
             }
         },
+        "/auth/": {
+            "post": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Authentication",
+                "parameters": [
+                    {
+                        "description": "Login, password",
+                        "name": "message",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/echo.JSONLogin"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "login": {
+                                            "type": "string"
+                                        },
+                                        "password": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Token",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/echo.JSONToken"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "token": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/echo.JSONResult"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "message": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "401": {
+                        "description": "Authentication error",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/echo.JSONResult"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "message": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "423": {
+                        "description": "Locked user",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/echo.JSONResult"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "message": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
         "/{login}": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "produces": [
                     "application/json"
                 ],
@@ -127,13 +240,6 @@
                 ],
                 "summary": "Retrieves user based on given Login",
                 "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Authorization token",
-                        "name": "token",
-                        "in": "path",
-                        "required": true
-                    },
                     {
                         "type": "string",
                         "description": "User login",
@@ -173,6 +279,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "produces": [
                     "application/json"
                 ],
@@ -181,13 +292,6 @@
                 ],
                 "summary": "Update user on given Login",
                 "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Authorization token",
-                        "name": "token",
-                        "in": "path",
-                        "required": true
-                    },
                     {
                         "type": "string",
                         "description": "User login",
@@ -254,6 +358,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "produces": [
                     "application/json"
                 ],
@@ -262,13 +371,6 @@
                 ],
                 "summary": "Delete user on given Login",
                 "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Authorization token",
-                        "name": "token",
-                        "in": "path",
-                        "required": true
-                    },
                     {
                         "type": "string",
                         "description": "User login",
@@ -348,6 +450,14 @@
                 }
             }
         },
+        "echo.JSONToken": {
+            "type": "object",
+            "properties": {
+                "token": {
+                    "type": "string"
+                }
+            }
+        },
         "models.User": {
             "type": "object",
             "required": [
@@ -359,7 +469,7 @@
             ],
             "properties": {
                 "dob": {
-                    "type": "integer"
+                    "type": "string"
                 },
                 "last_name": {
                     "type": "string"
@@ -381,22 +491,10 @@
         }
     },
     "securityDefinitions": {
-        "BasicAuth": {
-            "type": "basic"
+        "ApiKeyAuth": {
+            "type": "apiKey",
+            "name": "token",
+            "in": "query"
         }
-    },
-    "tags": [
-        {
-            "description": "Admin access",
-            "name": "admins"
-        },
-        {
-            "description": "Read only access. For all authorized but not blocked",
-            "name": "read"
-        },
-        {
-            "description": "For authorization",
-            "name": "auth"
-        }
-    ]
+    }
 }
